--- a/notebook-client/src/app/app.component.html
+++ b/notebook-client/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLInk="/home">Notebook</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li ><a routerLink="/home">Home</a></li>
+      <li ><a routerLink="/subject">Subject</a></li>
+      <li ><a routerLink="/learn">Learn</a></li>
+      <li ><a routerLink="/revision">Revision</a></li>
+    </ul>
+  </div>
+</nav>
+<router-outlet></router-outlet>
