--- a/notebook-client/src/app/views/subject.component.html
+++ b/notebook-client/src/app/views/subject.component.html
@@ -1,2 +1,33 @@
-<h1>Subject works</h1>
-<h1>{{subjects}}</h1>
+<div class="row" align="center">
+  <button type="button" class="btn btn-default">
+    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+  </button>
+</div>
+<div class="row" align="center">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <table class="table table-striped table-bordered">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Subject</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let subject of subjects">
+        <td>{{subject.id}}</td>
+        <td>{{subject.subjectName}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-2"></div>
+
+</div>
+<!--
+<ul>
+  <li *ngFor="let subject of subjects">
+    <span class="badge">{{subject.id}}</span> {{subject.subjectName}}
+  </li>
+</ul>
+-->
