--- a/notebook-client/src/app/views/subject.component.html
+++ b/notebook-client/src/app/views/subject.component.html
@@ -1,33 +1,63 @@
-<div class="row" align="center">
-  <button type="button" class="btn btn-default">
-    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
-  </button>
-</div>
-<div class="row" align="center">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-    <table class="table table-striped table-bordered">
-      <thead>
-      <tr>
-        <th>ID</th>
-        <th>Subject</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let subject of subjects">
-        <td>{{subject.id}}</td>
-        <td>{{subject.subjectName}}</td>
-      </tr>
-      </tbody>
-    </table>
+<div class="container">
+  <div class="row" align="center">
+    <button type="button" class="btn btn-default" (click)="addNewSubject()">
+      <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+    </button>
   </div>
-  <div class="col-md-2"></div>
 
+
+  <div class="row" *ngIf="showAddArea" align="center">
+    <div class="col-md-2"></div>
+    <div class="col-md-2">
+      <label>Subject Name: </label>
+    </div>
+    <div class="col-md-4">
+      <input id="addedSubject" [(ngModel)]="addedSubject" type="text" class="form-control">
+    </div>
+    <div class="col-md-2">
+      <button (click)="addSubject(addedSubject)" class="form-control btn btn-default">ADD</button>
+    </div>
+
+    <br>
+    <br>
+  </div>
+
+
+  <div class="row" align="center">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Subject</th>
+          <th>Edit</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let subject of subjects">
+          <td>{{subject.id}}</td>
+          <td *ngIf="subject.edit!=true">{{subject.subjectName}}</td>
+          <td *ngIf="subject.edit"><input type="text" [(ngModel)]="subject.subjectName"></td>
+          <td><button class="btn btn-default" (click)="enableEdit(subject)">Edit</button></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-2"></div>
+
+  </div>
+  <!--
+  <ul>
+    <li *ngFor="let subject of subjects">
+      <span class="badge">{{subject.id}}</span> {{subject.subjectName}}
+    </li>
+  </ul>
+  -->
+
+  <div class="row" align="right">
+    <br>
+    <button class="btn btn-success" (click)="save()">Save</button>
+  </div>
 </div>
-<!--
-<ul>
-  <li *ngFor="let subject of subjects">
-    <span class="badge">{{subject.id}}</span> {{subject.subjectName}}
-  </li>
-</ul>
--->
+
