Introductory home page added. Delete option removed in the subject section, because, if a subject is removed, then, there is no way the related items can be re-vised again, eventually, for the user, the data will be lost. Let the user add subjects as his wish, but, deleting is little bit disasterous.

--- a/notebook-client/src/app/views/home.component.html
+++ b/notebook-client/src/app/views/home.component.html
@@ -1,1 +1,46 @@
-<h1>Home works!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="app/images/notebook.jpg" class="img-rounded" alt="Personal Notebook" width="304" height="236">
+    </div>
+    <div class="col-md-6">
+      <h1>Welcome to <b>Personal Notebook</b></h1>
+      <br>
+      <p>
+        This app helps you to revise your day to day learned topics, so that you need little effort
+        to remember them in future. The app keep tracks of your learning resources.
+      </p>
+      <h3>Methodologies</h3>
+      <p>
+        This app follows a specific mechanism to help you doing revision in the most effective methods.
+        <br>
+        Researchers have found that, the best way to rember a thing is, by doing revision in the following basis:
+      </p>
+      <ul>
+        <li>Day after the study</li>
+        <li>One week after the study</li>
+        <li>One month after the study</li>
+        <li>Yearly revision</li>
+      </ul>
+      <h3>Technologies</h3>
+      <ul>
+        <li>Spring Framework</li>
+        <li>Angular 2</li>
+        <li>Spring Boot</li>
+        <li>Spring Data JPA</li>
+        <li>Spring Cloud</li>
+        <li>Postgresql</li>
+        <li>Bootstrap 3</li>
+        <li>Spring Dependency Injections</li>
+      </ul>
+      <h3>Future technologies integration plan</h3>
+      <ul>
+        <li>Apache Shiro Security</li>
+        <li>Hibernate</li>
+        <li>Login Page</li>
+        <li>Token based security</li>
+        <li>Fully deployment system</li>
+      </ul>
+    </div>
+  </div>
+</div>
