--- a/notebook-client/src/app/views/subject.component.html
+++ b/notebook-client/src/app/views/subject.component.html
@@ -28,7 +28,7 @@
     <div class="col-md-8">
       <table class="table table-striped table-bordered">
         <thead>
-        <tr>
+        <tr style="background-color: aquamarine">
           <th>ID</th>
           <th>Subject</th>
           <th>Edit</th>
@@ -36,10 +36,10 @@
         </thead>
         <tbody>
         <tr *ngFor="let subject of subjects">
-          <td>{{subject.id}}</td>
+          <td style="width:10%;">{{subject.id}}</td>
           <td *ngIf="subject.edit!=true">{{subject.subjectName}}</td>
           <td *ngIf="subject.edit"><input type="text" [(ngModel)]="subject.subjectName"></td>
-          <td>
+          <td style="width:10%;">
             <button class="btn btn-default" (click)="enableEdit(subject)">Edit</button>
           </td>
         </tr>
@@ -49,13 +49,7 @@
     <div class="col-md-2"></div>
 
   </div>
-  <!--
-  <ul>
-    <li *ngFor="let subject of subjects">
-      <span class="badge">{{subject.id}}</span> {{subject.subjectName}}
-    </li>
-  </ul>
-  -->
+
 
   <div class="row" align="right">
     <br>
