--- a/notebook-client/src/app/views/subject.component.html
+++ b/notebook-client/src/app/views/subject.component.html
@@ -22,8 +22,11 @@
     <br>
   </div>
 
+  <div class="row" align="center" *ngIf="showSpinner">
+    <i class="fa fa-spinner fa-pulse fa-8x fa-fw"></i>
+  </div>
 
-  <div class="row" align="center">
+  <div class="row" align="center" *ngIf="!showSpinner">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <table class="table table-striped table-bordered">
